--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     ports:
     - "7474:7474"
     volumes:
-    - ./Neo4J/shared/db:/data
-    - ./Neo4J/shared/logs:/logs
+    - ./shared/db:/data
+    - ./shared/logs:/logs
